<resources>
    <string name="app_name">Capstone</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Silakan Masuk atau Daftar</string>
    <string name="title_welcome_page">Selamat datang di StoryApp</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Silakan Login Terlebih Dahulu</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Datang.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="add">Add</string>
    <string name="desc">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story_image">Story Image</string>
    <string name="logo_image">Logo Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="item_image">Item Image</string>
    <string name="map">Map</string>
    <string name="title_activity_form">FormActivity</string>


    <string name="nama_usaha">Nama Usaha</string>
    <string name="submit">Submit</string>

    <string name="settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="form">Form</string>
    <string name="mentor">Mentor</string>
    <string name="webinar">Webinar</string>
    <string name="additional_information">Additional Information</string>
    <string name="feautures">Enjoy Our Features!</string>
</resources>