<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/welcome"
        android:textColor="@color/teal_700"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_features"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:text="@string/feautures"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form"
        android:layout_width="205dp"
        android:layout_height="200dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/iv_form"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/form"
            android:src="@drawable/form" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/form"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_list_mentor"
        android:layout_width="205dp"
        android:layout_height="200dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="180dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/iv_mentor"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/mentor"
            android:src="@drawable/mentor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/mentor"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_list_webinar"
        android:layout_width="205dp"
        android:layout_height="200dp"
        android:layout_marginTop="380dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/iv_webinar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/webinar"
            android:src="@drawable/webinar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/webinar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_additional_information"
        android:layout_width="205dp"
        android:layout_height="200dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="380dp"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/iv_information"
            android:layout_width="86dp"
            android:layout_height="83dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/additional_information"
            android:src="@drawable/additional_information" />

        <TextView
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/additional_information"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>